# qgis-mcp

./: .mcp.json  CLAUDE.md  GEMINI.md  README.md  install.py  pyproject.toml
qgis_mcp_plugin/: compat.py  metadata.txt  plugin.py
src/qgis_mcp/: client.py  compound_tools.py  server.py
tests/: test_mcp_tools.py  test_qgis_live.py
