[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qgis_mcp"]

[tool.uv]
package = true

[project]
name = "qgis-mcp"
version = "0.5.0"
description = "QGIS integration through the Model Context Protocol"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.20.0",
]

[project.scripts]
qgis-mcp-server = "qgis_mcp.server:main"

[dependency-groups]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = [
    "E501",    # line too long — handled by formatter
    "RUF001",  # ambiguous unicode in strings — en dashes are intentional prose
    "RUF002",  # ambiguous unicode in docstrings — en dashes are intentional prose
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]           # assert is fine in tests
"qgis_mcp_plugin/*" = ["UP038"]  # runs inside QGIS (Python 3.9 on QGIS 3.28) — `X | Y` in isinstance needs 3.10+
"benchmarks/*" = ["T201", "B023"]  # print is fine; loop-var closures are called within same iteration

[tool.pytest.ini_options]
asyncio_mode = "auto"
